--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,36 @@
     <color name="your_background_color">#FFFFFF</color> <!-- BottomNavigationView arka plan rengi -->
     <color name="color_selected">#FF5722</color>       <!-- Seçili ikon/metin rengi -->
     <color name="color_unselected">#757575</color>     <!-- Seçili olmayan ikon/metin rengi -->
+    <color name="red">#FF0000</color>
+    <color name="blue">#0000FF</color>
+    <color name="green">#008000</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="orange">#FFA500</color>
+    <color name="purple">#800080</color>
+    <color name="pink">#FFC0CB</color>
+    <color name="brown">#A52A2A</color>
+    <color name="gray">#808080</color>
+    <color name="light_blue">#ADD8E6</color>
+    <color name="dark_blue">#00008B</color>
+    <color name="lime">#00FF00</color>
+    <color name="teal">#008080</color>
+    <color name="cyan">#00FFFF</color>
+    <color name="magenta">#FF00FF</color>
+    <color name="gold">#FFD700</color>
+    <color name="silver">#C0C0C0</color>
+    <color name="indigo">#4B0082</color>
+    <color name="violet">#EE82EE</color>
+    <color name="beige">#F5F5DC</color>
+    <color name="coral">#FF7F50</color>
+    <color name="crimson">#DC143C</color>
+    <color name="navy">#000080</color>
+    <color name="olive">#808000</color>
+    <color name="olive_200">#EDEDBE</color>
+    <color name="salmon">#FA8072</color>
+    <color name="khaki">#F0E68C</color>
+    <color name="turquoise">#40E0D0</color>
+    <color name="plum">#DDA0DD</color>
+    <color name="intro1">#CBE4E5FF</color>
+    <color name="intro2">#efa08fff</color>
+    <color name="intro3">#f5ebe9ff</color>
 </resources>
