--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="pink">#FFC0CB</color>
     <color name="brown">#A52A2A</color>
     <color name="gray">#808080</color>
+    <color name="light_gray">#C5C5C5</color>
     <color name="light_blue">#ADD8E6</color>
     <color name="dark_blue">#00008B</color>
     <color name="lime">#00FF00</color>
