--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.TravelPlanner" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.TravelPlanner" parent="Theme.AppCompat.Light.NoActionBar" />
 
     <!-- Chip için özel tema -->
     <style name="CustomChipStyle" parent="Widget.MaterialComponents.Chip.Choice">
